--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,7 @@
 body {
     background-color: rgb(105, 85, 85);
     color: white;
+    box-sizing: border-box;
     
 }
 
@@ -13,16 +14,70 @@ body {
 }
 
     input {
-        background-color: white;
+        background-color: rgb(255, 255, 255);
         border-radius: 20px;
+        border: 3px solid white
     }
+
+    #glass {
+        border-radius: 30px;
+        border: 2px solid white;
+    }
+
+      #glass:focus {
+        background: rgb(255, 189, 57);
+        color: white;
+        border: 2px solid rgb(255, 189, 57);
+      }
+
+    .dropbtn {
+        background-color: rgb(85, 65, 65);
+        color: white;
+        padding: 16px;
+        font-size: 16px;
+        border: none;
+        cursor: pointer;
+      }
+      
+      .dropbtn:hover {
+        background-color: rgb(135, 109, 109);
+      }
+
+
+      
+      .dropdown {
+        position: relative;
+        display: inline-block;
+      }
+      
+      .dropdown-content {
+        display: none;
+        position: absolute;
+        background-color: #f1f1f1;
+        min-width: 147px;
+        overflow: auto;
+        box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+        z-index: 1;
+      }
+      
+      .dropdown-content a {
+        color: black;
+        padding: 12px 16px;
+        text-decoration: none;
+        display: block;
+      }
+      
+      .dropdown a:hover {background-color: #ddd;}
+
+      .show {
+        display: block;
+      }
 
 .weather {
     display: flex;
     flex-wrap: wrap;
     flex-direction: column;
     align-content: center;
-    margin: 30px;
     text-align: center;
     /* width: 250px;
     height: 250px; */
@@ -44,13 +99,13 @@ body {
             list-style-type: none;
 
         }
-        .icon{
+        .icon, .icon1, .icon2, .icon3, .icon4, .icon5{
             font-size: 1.2em;
             
 
         }
 
-        .temp {
+        .temp, .temp1, .temp2, .temp3, .temp4, .temp5 {
             font-size: 3em;
         }
 
@@ -59,7 +114,7 @@ body {
         flex-wrap: wrap;
         flex-direction: column;
     }
-        .condition {
+        .condition, .condition1,.condition2,.condition3,.condition4,.condition5 {
             padding: 2px;
             /* border: 1px solid white; */
             text-align: center;
@@ -73,17 +128,18 @@ body {
                 /* border: 1px solid white; */
                 list-style-type: none;
                 padding: 0 5px;
-                font-size: .8em;
+                font-size: .7em;
             }
     .daily-weather {
         color: black;
         display:flex;
-        justify-content: space-around;
-        margin-top:15vh;
-        padding:0 2vw;
+        justify-content: space-evenly;
+        margin: 0 auto;
+        padding:5vw 2vw;
+        max-width: 1400px;
     }
     .days {
-        background-color:rgb(85, 65, 65);
+        background-color:rgba(255, 255, 255, 0.176);
         border: none;
         color:aliceblue
     }
@@ -93,6 +149,24 @@ body {
         border-radius: 20px;
     }
 
+    /* uv index color code */
+    .low {
+        background-color: rgba(0, 128, 0, 0.300);
+        border-radius: 5px;
+    }
 
+    .moderate {
+        background-color: rgba(255, 255, 0, 0.500);
+        border-radius: 5px;
+    }
 
+    .high {
+        background-color: rgba(255, 166, 0, 0.500);
+        border-radius: 5px;
+    }
+
+    .veryHigh { 
+        background-color: rgba(255, 0, 0, 0.300);
+        border-radius: 5px;
+    }
 
